# AgentZerov2

./: .gitignore  AGENTZERO_OMEGA_AUDIT_v3.md  DOCKER_HUB_DEPLOYMENT.md  Dockerfile  Dockerfile.swarm  ITERATION_1_SPEC.md  ITERATION_2_SPEC.md  ITERATION_3_SPEC.md  agent.py  initialize.py  memory_config.json  models.py  run_ui.py
.claude/: settings.local.json
.opencode/plans/: Plan.MD
conf/: model_providers.yaml
docker/run/: docker-compose.yml
prompts/: agent.system.tool.swarm_consensus.md  agent.system.tool.swarm_patterns.md  agent.system.tool.swarm_workflow.md  fw.memory_saved_enhanced.md
python/api/: backup_restore.py  nvidia_roles.py  telemetry_export.py
python/helpers/: agent0_evolution.py  agent_pool.py  async_locks.py  backup.py  (+27 more)
tests/: test_ralphloop_bug_detection.py  test_swarm_orchestration.py  test_swarm_orchestration.py.backup  test_swarm_orchestration.py.new
usr/: settings.json
usr/projects/coding_agent/: .dockerignore  CODEX_INTEGRATION.md  README.md  codex_examples.py  codex_wrapper.py  deploy.sh  pyproject.toml  pytest.ini  requirements.txt
usr/projects/coding_agent/.a0proj/: project.json
usr/projects/coding_agent/.a0proj/memory/: index.faiss  index.pkl  knowledge_import.json
usr/projects/coding_agent/content_automation/clients/: airtable_client.py  apify_client.py  elevenlabs_client.py  openai_client.py  renderform_client.py
usr/projects/coding_agent/content_automation/config/: settings.py
usr/projects/coding_agent/content_automation/core/: errors.py  interfaces.py  logging.py
usr/projects/coding_agent/content_automation/pipeline/: orchestrator.py
usr/projects/coding_agent/content_automation/tools/: ffmpeg_wrapper.py  whisper_wrapper.py
usr/projects/coding_agent/content_automation/workflows/: __init__.py  auto_publisher.json  content_creator.json  idea_scraper.json
usr/projects/coding_agent/docker/: Dockerfile  docker-compose.yml
usr/projects/coding_agent/scripts/: example_creator.py  example_full_pipeline.py  example_publisher.py  example_scraper.py
usr/projects/coding_agent/tests/: __init__.py  conftest.py  test_clients.py  test_config.py  test_orchestrator.py  test_tools.py
webui/: index.html
(+113 files in other folders)
